Fix: 인기 게시판 게시글 수 재집계 제거